# Sabina2014

./: CMakeLists.txt  README.md  Sabina2014.kdev4  main.cpp  main.cpp~
FaceRecognition/: CMakeLists.txt  CMakeLists.txt~  learn.cpp  learn.cpp~  main.cpp  main.cpp~  recognize.cpp
GestureRecognition/: CMakeLists.txt  CMakeLists.txt~  HandControl.cpp  HandControl.cpp~  HandControl.h  HandControl.h~  README  Robot.cpp  Robot.h  main.cpp  main.cpp~  mainSource.cpp
Human/: Human.cpp  Human.h
Kinect/: CMakeLists.txt  CMakeLists.txt~  Ni_Device.cpp  Ni_Device.cpp~  Ni_Device.h  Ni_Device.h~  Ni_Device0.cpp  main.cpp  main.cpp~  main2.cpp  main2.cpp~  mainbk.cpp
Kinect1/: CMakeLists.txt~  Ni_Device.h  main.cpp~
Manipulation/: CMakeLists.txt~  armkatana.cpp  armkatana.cpp~  armkatana.h  armkatana.h~  armkatanaforsabina.cpp  armkatanaforsabina.h  armkatanaforsabina.h~  main.cpp  main.cpp~
Manipulation/backupman1/: CMakeLists.txt  main.cpp  main.cpp~
NavigationClient/: CMakeLists.txt  CMakeLists.txt~  goalClient.cpp  main.cpp  main.cpp~  main0.cpp  main0.cpp~
SharedMemory/: CMakeLists.txt  CMakeLists.txt~  Camera.h~  Kinect.cpp  Kinect.h  Map.h  Map.h~  Objective.cpp  Objective.cpp~  Objective.h  Objective.h~  PTZ.cpp  PTZ.cpp~  SharedMemory.cpp  SharedMemory.cpp~  SharedMemory.h  SharedMemory.h~  Synthesis.h  Voice.h
Vision_Objects/: CMakeLists.txt  CMakeLists.txt~  HC.cpp  HC.hpp  HC.hpp~  main.cpp  main.cpp~  recognizer.cpp  recognizer.hpp  recognizer.hpp~
VoiceRecognitionServer/: CMakeLists.txt~  NetThread.cpp  NetThread.cpp~  Server.cpp  Server.cpp~  beepStartSpeech.cpp~  beepStartSpeech.h~  main.cpp  main.cpp~  main_Original.cpp  main_Original.cpp~
VoiceSynthesis/: CMakeLists.txt  CMakeLists.txt~  VoiceSynthesis.cpp  VoiceSynthesis.cpp~  main.cpp  main.cpp~
data/: BFunctionalities  Destinations.cfg  Destinations.cfg~  Emergency  Emergency~  TEST_plugins  TEST_plugins~  Test_List  Test_List~  conf  conf~
data/EmergencyReport/: EmergencyReport.aux  EmergencyReport.tex  EmergencyReport.tex~  Untitled Document
data/Kinect/: SamplesConfig.xml  SamplesConfig.xml~  SamplesConfig2.xml  SamplesConfig2.xml~
